--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -1,16 +1,8 @@
-
 name: Run Script
 
-on:
-  push:
-    branches: [ main ]
-    paths-ignore:
-      - '**/README.md'
-  pull_request:
-    branches: [ main ]
-    paths-ignore:
-      - '**/README.md'
 
+on:
+    
   workflow_dispatch:
 
 jobs:
@@ -39,29 +31,8 @@ jobs:
           chmod +x ./build-from-source.sh
           ./build-from-source.sh
           ls
-
-  build-from-prebuilt:
-    runs-on: ubuntu-latest
-
-    steps:
-    
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Upload Dist
+        uses: actions/upload-artifact@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
- 
-      - name: Download YouTube apk
-        run: |
-          mkdir "build"
-          cd "build"
-          wget -q "https://github.com/CnC-Robert/revanced-cli-script/releases/download/stock-yt-17.19.36/youtube.apk"
-          cd ..
-      
-      - name: Execute script
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          chmod +x ./build-from-prebuilt.sh
-          ./build-from-prebuilt.sh
-          ls
+          path: revanced.apk
+          name: dist
