--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -36,3 +36,35 @@ jobs:
         with:
           path: revanced.apk
           name: dist
+          
+
+  build-from-source-sponsor:
+    runs-on: ubuntu-latest
+
+    steps:
+    
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+ 
+      - name: Download YouTube apk
+        run: |
+          mkdir "build"
+          cd "build"
+          wget -q "https://github.com/LoV432/revanced-cli-script/releases/download/clean-yt-17.22.36/youtube.apk"
+          cd ..
+      
+      - name: Execute script
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          chmod +x ./build-from-source.sh
+          ./build-from-source.sh
+          ls
+      - name: Upload Dist
+        uses: actions/upload-artifact@v2
+        with:
+          path: revanced.apk
+          name: dist
