--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -25,6 +25,8 @@ jobs:
           cd ..
       
       - name: Execute script
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           chmod +x ./build-from-source.sh
           ./build-from-source.sh
