--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           mkdir "build"
           cd "build"
-          wget -q "https://github.com/LoV432/revanced-cli-script/releases/download/clean-yt-17.26.35/youtube.apk"
+          wget -q "https://github.com/LoV432/revanced-cli-script/releases/download/clean-reddit-2022.28.0/reddit.apk"
           cd ..
       
       - name: Execute script
